--- a/.classpath
+++ b/.classpath
@@ -7,13 +7,7 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="var" path="ECLIPSE_HOME"/>
 	<classpathentry kind="var" path="SWT_LIB"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding_1.11.200.v20221024-2137.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding_1.11.200.v20221024-2137.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.beans_1.9.0.v20221024-2137.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.beans_1.9.0.v20221024-2137.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.observable_1.12.100.v20221024-2137.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.observable_1.12.100.v20221024-2137.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.property_1.9.100.v20221024-2137.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.core.databinding.property_1.9.100.v20221024-2137.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.jface.databinding_1.14.0.v20221024-2137.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.jface.databinding_1.14.0.v20221024-2137.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/org.eclipse.equinox.common_3.17.0.v20221108-1156.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/org.eclipse.equinox.common_3.17.0.v20221108-1156.jar"/>
-	<classpathentry kind="lib" path="C:/Users/andre/.p2/pool/plugins/com.ibm.icu_72.1.0.jar" sourcepath="C:/Users/andre/.p2/pool/plugins/com.ibm.icu_72.1.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
